# Slipstream

./: .coverage  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Procfile  README.md  SECURITY.md  ml-readme.md  nixpacks.toml  patch_telemetry.py  pyproject.toml  railway.json  scratch_cleanup.py  scratch_update.py
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
apps/backend/: alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0002_add_race_columns.py  0003_add_telemetry_columns.py  0005_fix_compound_check.py  0006_clean_telemetry_columns.py  0007_add_wet_compound.py  0008_lap_telemetry_stats.py  0009_add_weather_to_sessions.py  0010_add_quali_segment_to_lap_times.py  0011_add_telemetry_artifacts.py  0012_add_race_intelligence_events.py  70a85a9bd709_initial_schema.py
apps/backend/src/backend/: __init__.py  config.py  extensions.py  health.py  race_vector_index.py
apps/backend/src/backend/api/v1/: analysis.py  drivers.py  laps.py  predictions.py  schedule.py  sessions.py  strategy.py  telemetry.py
apps/backend/tests/: conftest.py  test_analysis.py  test_drivers.py  test_health.py  test_laps.py  test_sessions.py  test_telemetry_artifacts.py
apps/ml/: pyproject.toml
docs/: README.md  architecture.md  data-model.md  deployment.md  ingestion.md  local-development.md  ml-race-prediction.md  release-checklist.md  testing.md
infra/: Dockerfile.worker  docker-compose.yml
ml_models/: race_predictor.pkl
(+64 files in other folders)
