[project]
name = "pitwaal-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flaml>=2.1",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "shap>=0.45",
    "mlflow>=2.14",
    "polars>=1.0",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.0",
    "celery[redis]>=5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
